--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -23,10 +23,10 @@
 {{end}}
 
 {{define "header"}}
-<header id="header" class="maintop">
+<header id="header" class="maintop border-bottom">
   {{$authed := .UserInfo.Authed}}
-  <a href="/" class="logo-icon d-none d-md-block"></a>
-  <a href="/" class="logo-icon d-block d-md-none"></a>
+  <a href="/" class="logo-icon d-none d-md-block mx-2"></a>
+  <a href="/" class="logo-icon d-block d-md-none mx-2"></a>
   <div id="headerSpace"></div>
   <div class="mainlinks fs18 pe-2 text-nowrap">
 
