--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -8,17 +8,17 @@
 </div>
 <div data-tmpl="allSettings">
   <div data-tmpl="dynamicOpts" class="dynamicopts">
-    <div data-tmpl="textInput" class="px-0 d-flex flex-column justify-content-end">
+    <div data-tmpl="textInput" class="px-0 d-flex flex-column justify-content-end mt-3">
       <label class="form-label small"> <span class="ico-info"></span></label>
       <input type="text" class="form-control select">
     </div>
-    <div data-tmpl="checkbox" class="d-flex align-items-center">
+    <div data-tmpl="checkbox" class="d-flex align-items-center mt-3">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="">
         <label class="form-check-label fs14"> <span class="ico-info fs13"></span></label>
       </div>
     </div>
-    <div data-tmpl="dateInput" class="px-0 d-flex flex-column justify-content-end">
+    <div data-tmpl="dateInput" class="px-0 d-flex flex-column justify-content-end mt-3">
       <label class="form-label small"> <span class="ico-info"></span></label>
       <input type="date" class="form-control select">
     </div>
@@ -54,7 +54,7 @@
 
 {{define "newWalletForm"}}
 <div class="form-closer"><span class="ico-cross"></span></div>
-<div class="wallet-tabs" data-tmpl="walletTypeTabs">
+<div class="wallet-tabs mb-3" data-tmpl="walletTypeTabs">
   <div class="wtab" data-tmpl="walletTabTmpl"></div>
 </div>
 <h3 data-tmpl="header">
