--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -493,7 +493,7 @@
                     
                     <!-- <span class="fs11 ico-open ms-2"></span> -->
                   </div>
-                  <div data-tmpl="details" class="order-details d-hide">
+                  <div data-tmpl="details" class="order-details border-top border-bottom d-hide">
                     <div class="user-order-datum full-span d-flex flex-row justify-content-start align-items-center border-bottom fs14">
                       <span data-tmpl="accelerateBttn" class="ico-rocket pointer hoverbg d-hide py-2 px-3 me-1" data-tooltip="[[[accelerate_order]]]"></span>
                       <span data-tmpl="cancelBttn" class="ico-cross pointer hoverbg fs11 d-hide py-2 px-3 mx-1" data-tooltip="[[[cancel_order]]]"></span>
