--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -6,34 +6,34 @@
     <div class="flex-stretch-column justify-content-start orders-left-side pt-3 px-2">
       <div class="demi fs22 text-center mb-3">[[[Order History]]]</div>
       <div class="filter-display">[[[Exchanges]]]</div>
-      <div id="hostFilter" class="filter-opts">
+      <div id="hostFilter" class="filter-opts mb-3">
         {{range .Hosts}}
         <div class="ps-2 pe-2">
           <input class="form-check-input" type="checkbox" value="{{.}}">
           <label class="form-check-label fs14">{{.}}</label>
         </div>
         {{end}}
-        <div class="apply-bttn d-hide"><button class="small">[[[apply]]]</button></div>
+        <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small">[[[apply]]]</button></div>
       </div>
       <div class="filter-display">[[[Assets]]]</div>
-      <div id="assetFilter" class="filter-opts">
+      <div id="assetFilter" class="filter-opts mb-3">
         {{range $assetID, $asset := .Assets}}
         <div class="ps-2 pe-2">
           <input class="form-check-input" type="checkbox" value="{{$assetID}}">
           <label class="form-check-label fs14">{{$asset.Symbol}}</label>
         </div>
         {{end}}
-        <div class="apply-bttn d-hide"><button class="small go">[[[apply]]]</button></div>
+        <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small go">[[[apply]]]</button></div>
       </div>
       <div class="filter-display">[[[Status]]]</div>
-      <div id="statusFilter" class="filter-opts">
+      <div id="statusFilter" class="filter-opts mb-3">
         {{range $status, $statusString := .Statuses}}
         <div class="ps-2 pe-2">
           <input class="form-check-input" type="checkbox" value="{{$status}}">
           <label class="form-check-label fs14">{{$statusString}}</label>
         </div>
         {{end}}
-        <div class="apply-bttn d-hide"><button class="small go">[[[apply]]]</button></div>
+        <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small go">[[[apply]]]</button></div>
       </div>
       <div id="exportOrders" class="text-center">
         <button class="small">[[[Export Trades]]]</button>
