--- a/client/webserver/site/src/css/utilities.scss
+++ b/client/webserver/site/src/css/utilities.scss
@@ -18,6 +18,14 @@
   align-items: stretch;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.text-nowrap {
+  white-space: nowrap;
+}
+
 .position-relative {
   position: relative;
 }
@@ -186,4 +194,8 @@ div.clear {
 
 .user-select-all {
   user-select: all;
+}
+
+.text-danger {
+  color: var(--bs-danger);
 }
