--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -279,7 +279,7 @@
   <div data-tmpl="assetSelection">
     <h5 class="text-center">[[[Select your bond asset]]]</h5>
     <div data-tmpl="whatsABond" class="flex-center fs18 hoverbg pointer underline py-2 mb-2">[[[what_s_a_bond]]]</div>
-    <table class="mb-3">
+    <table class="compact cell-border mb-3">
       <thead>
         <tr class="fs16">
           <th>[[[Asset]]]</th>
@@ -331,7 +331,7 @@
       </tbody>
     </table>
     <h5 class="text-center">[[[Other Trading Limits]]]</h5>
-    <table>
+    <table class="cell-border compact">
       <tbody data-tmpl="otherAssets">
       </tbody>
     </table>
@@ -341,7 +341,7 @@
         <span class="fs18 text-break" data-tmpl="host"></span>
       </div>
       <div class="reg-assets-markets-wrap flex-center flex-grow-1">
-        <table class="reg-asset-markets">
+        <table class="reg-asset-markets ms-3">
           <thead>
             <tr>
               <th class="text-muted">[[[Market]]]</th>
