--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -117,12 +117,12 @@
             <div class="stylish-overflow hoveronly overflow-x-hidden flex-grow-1 ordertable-wrap reversible">
 
               {{- /* SELL ORDER LIST */ -}}
-              <table class="ordertable">
+              <table class="ordertable row-hover">
                 <tbody id="sellRows"></tbody>
               </table>
             </div>
 
-            <div class="ordertable-header flex-center fs15">
+            <div class="ordertable-header flex-center fs15 border-top">
               <span class="flex-grow-1">Order Book</span>
               <span class="flex-center">
                 <span id="obUp" class="ico-arrowup buycolor fs11"></span>
@@ -771,7 +771,7 @@
               [[[best_case_conditions]]]
             </div>
             <div class="d-flex">
-              <table class="fee-breakout">
+              <table class="fee-breakout cell-border my-1">
                 <tr>
                   <td><img class="micro-icon" data-icon="from"> [[[Swap]]]</td>
                   <td><img class="micro-icon" data-icon="to"> [[[Redeem]]]</td>
@@ -790,7 +790,7 @@
               [[[worst_case_conditions]]]
             </div>
             <div class="d-flex">
-              <table class="fee-breakout">
+              <table class="fee-breakout cell-border my-1">
                 <tr>
                   <td><img class="micro-icon" data-icon="from"> [[[Swap]]]</td>
                   <td><img class="micro-icon" data-icon="to"> [[[Redeem]]]</td>
