--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -41,7 +41,7 @@
     <div id="mmErr"  class="flex-center text-danger d-hide"></div>
 
     <div class="px-5 py-3 w-100">
-      <table id="botTable" class="d-hide mb-3">
+      <table id="botTable" class="row-border d-hide mb-3">
         <thead>
           <th id="enabledHeader">[[[enabled]]]</th>
           <th id="runningHeader" class="d-hide">[[[running]]]</th>
