--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="flex-grow-1 p-3">
-      <table id="ordersTable" class="table table-striped table-hover table-sm">
+      <table id="ordersTable" class="striped row-hover compact">
         <thead id="tableHead">
           <tr>
             <th class="py-2">[[[Trade]]]</th>
