--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -543,7 +543,7 @@
       <div id="botTypeErr" class="flex-center pt-3 text-danger d-hide"></div>
 
       <div class="d-flex justify-content-center">
-        <div id="botTypeSubmit" class="feature large">[[[Submit]]]</div>
+        <button id="botTypeSubmit" class="go w-100">[[[Submit]]]</butt>
       </div>
     </form>
 
