--- a/client/webserver/site/src/css/bootstrap.scss
+++ b/client/webserver/site/src/css/bootstrap.scss
@@ -19,7 +19,7 @@
 @import "~bootstrap/scss/forms/form-control";
 @import "~bootstrap/scss/forms/form-select";
 @import "~bootstrap/scss/forms/form-check";
-@import "~bootstrap/scss/buttons";
+// @import "~bootstrap/scss/buttons";
 // @import "~bootstrap/scss/_transitions.scss";
 // @import "~bootstrap/scss/_dropdown.scss";
 // @import "~bootstrap/scss/button-group";
