--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <div id="marketReopener" class="flex-center pointer hoverbg">
+  <div id="marketReopener" class="flex-center pointer hoverbg border-bottom border-end">
     <span class="ico-arrowright d-inline-block fs24">
   </div>
 
@@ -81,27 +81,27 @@
           </div>
         </div>
 
-        <div class="twentyfour flex-center align-items-stretch">
+        <div class="twentyfour flex-center align-items-stretch border-start">
           <div class="data-point">
-            <span class="label grey">24 Hr.</span>
+            <span class="label grey border-bottom">24 Hr.</span>
           </div>
     
           <div class="data-point">
-            <span class="label grey">[[[:title:volume]]]</span>
+            <span class="label grey border-bottom">[[[:title:volume]]]</span>
             <div class="flex-center me-2">
               <div data-tmpl="volume">-</div>
             </div>
           </div>
     
           <div class="data-point">
-            <span class="label grey">High</span>
+            <span class="label grey border-bottom">High</span>
             <div class="flex-center ms-2">
               <div data-tmpl="high">-</div>
             </div>
           </div>
     
           <div class="data-point">
-            <span class="label grey">Low</span>
+            <span class="label grey border-bottom">Low</span>
             <div class="flex-center ms-2">
               <div data-tmpl="low">-</div>
             </div>
@@ -156,7 +156,7 @@
           <div class="flex-grow-1 position-relative">
             <div class="fill-abs flex-stretch-column">
               <div id="candlesChart" class="market-chart">
-                <div id="durBttnBox"><button class="candle-dur-bttn" id="durBttnTemplate"></button></div>
+                <div id="durBttnBox"><button class="candle-dur-bttn border rounded3" id="durBttnTemplate"></button></div>
               </div>
 
               <div class="chart-legend text-muted">
@@ -192,7 +192,7 @@
           </div>
 
           {{- /* ORDER FORM */ -}}
-          <div class="order-panel pb-3 position-relative">
+          <div class="order-panel pb-3 border position-relative">
             <div id="orderScroller" class="flex-stretch-column">
 
               {{- /* TOKEN APPROVAL */ -}}
