--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -3,7 +3,7 @@
 <div id="main" data-handler="orders" class="main overflow-y-auto">
 
   <div class="w-100 d-flex justify-content-start align-items-stretch">
-    <div class="flex-stretch-column justify-content-start orders-left-side pt-3 px-2">
+    <div class="flex-stretch-column justify-content-start orders-left-side border-end pt-3 px-2">
       <div class="demi fs22 text-center mb-3">[[[Order History]]]</div>
       <div class="filter-display">[[[Exchanges]]]</div>
       <div id="hostFilter" class="filter-opts mb-3">
