--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -83,7 +83,7 @@
                 </div>
               </div>
 
-              <div class="d-flex justify-content-start align-items-stretch flex-column col-sm-24 col-md-12 p-3" id="walletInfo">
+              <div class="d-flex justify-content-start align-items-stretch flex-column border-start col-sm-24 col-md-12 p-3" id="walletInfo">
                 <table id="walletInfoTable" class="fs14 w-100">
                   <tbody>
                     <tr id="statusLocked">
